--- a/AUF.EMR.MVC/Views/Masterlist/SeniorCitizen.cshtml
+++ b/AUF.EMR.MVC/Views/Masterlist/SeniorCitizen.cshtml
@@ -43,7 +43,7 @@
                     @Html.DisplayFor(modelItem => item.HouseholdNo)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.FullName)
+                    @Html.DisplayFor(modelItem => item.FormattedFullName)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Household.FullAddress)
