--- a/AUF.EMR.MVC/Views/WRA/Index.cshtml
+++ b/AUF.EMR.MVC/Views/WRA/Index.cshtml
@@ -69,7 +69,7 @@
 @foreach (var item in Model.WRAs) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.HouseholdMember.FullName)
+                @Html.DisplayFor(modelItem => item.HouseholdMember.FormattedFullName)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.HouseholdNo)
