--- a/AUF.EMR.MVC/Views/HouseHold/HouseholdProfile.cshtml
+++ b/AUF.EMR.MVC/Views/HouseHold/HouseholdProfile.cshtml
@@ -74,8 +74,8 @@
                     @Html.DisplayFor(modelItem => item.ContactNo)
                 </td>
                 <td>
+                    <a class="btn btn-success" asp-action="Details" asp-route-id="@item.Id">View</a>
                     <a class="btn btn-primary" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
-                    <a class="btn btn-success" asp-action="Details" asp-route-id="@item.Id">Details</a>
                     <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
                 </td>
             </tr>
