--- a/AUF.EMR.MVC/Views/PregnancyTracking/Index.cshtml
+++ b/AUF.EMR.MVC/Views/PregnancyTracking/Index.cshtml
@@ -66,7 +66,7 @@
 @foreach (var item in Model.PregnancyTrackingList) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.HouseholdMember.FullName)
+                @Html.DisplayFor(modelItem => item.HouseholdMember.FormattedFullName)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Age)
