--- a/AUF.EMR.MVC/Views/HouseHold/Create.cshtml
+++ b/AUF.EMR.MVC/Views/HouseHold/Create.cshtml
@@ -77,10 +77,16 @@
                 <input asp-for="ContactNo" class="form-control" />
                 <span asp-validation-for="ContactNo" class="text-danger"></span>
             </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="IsNHTS" /> @Html.DisplayNameFor(model => model.IsNHTS)
-                </label>
+            <div class="form-group ">
+                <label class="control-label"></label>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" asp-for="IsNHTS" value="true" />
+                    <label class="form-check-label">NHTS</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" asp-for="IsNHTS" value="false" />
+                    <label class="form-check-label">Non NHTS</label>
+                </div>
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
