--- a/AUF.EMR.MVC/Views/HouseHold/Edit.cshtml
+++ b/AUF.EMR.MVC/Views/HouseHold/Edit.cshtml
@@ -77,10 +77,16 @@
                 <input asp-for="Household.ContactNo" class="form-control" />
                 <span asp-validation-for="Household.ContactNo" class="text-danger"></span>
             </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="Household.IsNHTS" /> @Html.DisplayNameFor(model => model.Household.IsNHTS)
-                </label>
+            <div class="form-group ">
+                <label class="control-label"></label>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" asp-for="Household.IsNHTS" value="true" />
+                    <label class="form-check-label">NHTS</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" asp-for="Household.IsNHTS" value="false" />
+                    <label class="form-check-label">Non NHTS</label>
+                </div>
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
