--- a/AUF.EMR.MVC/Views/Masterlist/SchoolAged.cshtml
+++ b/AUF.EMR.MVC/Views/Masterlist/SchoolAged.cshtml
@@ -5,6 +5,8 @@
 }
 
 <h1>List of School-aged Children</h1>
+<a asp-action="PrintChildren" asp-route-requestUrl="@Model.RequestUrl" asp-route-householdNo="@Model.HouseholdNo">Print Masterlist</a>
+<br />
 
 @Html.PartialAsync("_FormNav", Model.HouseholdNo).Result
 
