--- a/AUF.EMR.MVC/Views/OralHealthClient/Infant.cshtml
+++ b/AUF.EMR.MVC/Views/OralHealthClient/Infant.cshtml
@@ -5,6 +5,8 @@
 }
 
 <h1>Masterlist of Oral Health Care Clients - Infant</h1>
+<a asp-action="Print" asp-route-requestUrl="@Model.RequestUrl" asp-route-householdNo="@Model.HouseholdNo">Print Masterlist</a>
+<br />
 
 @Html.PartialAsync("_FormNav", Model.HouseholdNo).Result
 
