--- a/AUF.EMR.MVC/Views/HouseHold/Index.cshtml
+++ b/AUF.EMR.MVC/Views/HouseHold/Index.cshtml
@@ -10,6 +10,9 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+<p>
+    <a asp-action="Barangay" asp-controller="Dashboard">See Barangay Summary</a>
+</p>
 <form asp-action="Index">
     <div class="input-group md-form form-sm form-2 pl-0">
         <input name="query" class="form-control my-0 py-1" type="text" placeholder="Search House Hold No. or Name" />
