--- a/AUF.EMR.MVC/Views/Shared/_Layout.cshtml
+++ b/AUF.EMR.MVC/Views/Shared/_Layout.cshtml
@@ -26,6 +26,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="HouseHold" asp-action="Index">Household Profile</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Summary" asp-action="Index">Summary</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
