Remove email in registration and edit nav bar depending on user role

--- a/AUF.EMR.MVC/Views/Dashboard/Household.cshtml
+++ b/AUF.EMR.MVC/Views/Dashboard/Household.cshtml
@@ -1,5 +1,9 @@
 ﻿@model DashboardVM
 
+@{
+    ViewData["Barangay"] = Model.Barangay.BarangayName;
+}
+
 <p>Household Member #: @Model.HouseholdMemberCount</p>
 <p>Newborns #: @Model.NewbornCount</p>
 <p>Infant #: @Model.InfantCount</p>
