--- a/AUF.EMR.MVC/Views/Dashboard/Barangay.cshtml
+++ b/AUF.EMR.MVC/Views/Dashboard/Barangay.cshtml
@@ -1,5 +1,9 @@
 ﻿@model DashboardVM
 
+@{
+    ViewData["Barangay"] = Model.Barangay.BarangayName;
+}
+
 <p>Household #: @Model.HouseholdCount</p>
 <p>Household Member #: @Model.HouseholdMemberCount</p>
 <p>Newborns #: @Model.NewbornCount</p>
