--- a/AUF.EMR.MVC/Views/User/Index.cshtml
+++ b/AUF.EMR.MVC/Views/User/Index.cshtml
@@ -5,7 +5,9 @@
 }
 
 <h1>List of Employees</h1>
-
+<p>
+    <a asp-controller="Barangay">View Barangay Details</a>
+</p>
 <p>
     <a asp-action="Create">Create New</a>
 </p>
