Add validation in creating household form. Implement soft delete on households

--- a/AUF.EMR.MVC/Views/Barangay/Edit.cshtml
+++ b/AUF.EMR.MVC/Views/Barangay/Edit.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "Edit";
-    ViewData["Barangay"] = "Barangay";
+    ViewData["Barangay"] = Model.Barangay.BarangayName;
 }
 
 <h1>Edit</h1>
