--- a/AUF.EMR.MVC/Views/Barangay/Index.cshtml
+++ b/AUF.EMR.MVC/Views/Barangay/Index.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "Index";
-    ViewData["Barangay"] = "Barangay";
+    ViewData["Barangay"] = Model.BarangayName;
 }
 
 <h1>Index</h1>
