--- a/AUF.EMR.MVC/Views/HouseHoldMember/Index.cshtml
+++ b/AUF.EMR.MVC/Views/HouseHoldMember/Index.cshtml
@@ -1,61 +1,57 @@
-﻿@model IEnumerable<AUF.EMR.Domain.Models.HouseholdMember>
-
+﻿@model HouseholdMemberListVM
 @{
     ViewData["Title"] = "Index";
+    ViewData["Barangay"] = Model.Barangay.BarangayName;
 }
 
-<h1>Index</h1>
+<h1>Household member of household #: @Model.Household.HouseholdNo</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.LastName)
+                LastName
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.FirstName)
+                FirstName
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.MotherMaidenName)
+                MotherMaidenName
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.RelationshipToHouseholdHead)
+                RelationshipToHouseholdHead
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Sex)
+               Sex
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Age)
+               Age
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Birthday)
+                Birthday
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.FirstQtrClassification)
+                FirstQtrClassification
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.SecondQtrClassification)
+                SecondQtrClassification
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ThirdQtrClassification)
+                ThirdQtrClassification
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.FourthQtrClassification)
+                FourthQtrClassification
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Remarks)
+                Remarks
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Household)
+                Household
             </th>
-            <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+@foreach (var item in Model.HouseholdMembers) {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.LastName)
@@ -95,11 +91,6 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Household.Barangay)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
 }
