--- a/AUF.EMR.MVC/Views/Shared/Layouts/_HouseholdLayout.cshtml
+++ b/AUF.EMR.MVC/Views/Shared/Layouts/_HouseholdLayout.cshtml
@@ -23,6 +23,7 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="~/lib/flowbite/dist/flowbite.js"></script>
+    <script src="~/lib/flowbite/dist/datepicker.min.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
