Design household profile and form layout

--- a/AUF.EMR.MVC/Views/Shared/Components/_HouseholdCard.cshtml
+++ b/AUF.EMR.MVC/Views/Shared/Components/_HouseholdCard.cshtml
@@ -40,11 +40,11 @@
     </div>
     <!-- Third row -->
     <div class="flex justify-end mt-4">
-        <button type="button" class="text-white font-medium bg-primary-50 border border-gray-200 focus:ring-4 focus:outline-none focus:ring-gray-100 font-medium rounded-full text-sm px-3 py-3 text-center inline-flex items-center me-2 mb-2">
+        <a asp-action="HouseholdProfile" asp-route-householdNo="@Model.HouseholdNo" type="button" class="text-white font-medium bg-primary-50 border border-gray-200 focus:ring-4 focus:outline-none focus:ring-gray-100 font-medium rounded-full text-sm px-3 py-3 text-center inline-flex items-center me-2 mb-2">
             <svg class="w-6 h-6 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" viewBox="0 0 24 24">
                 <path fill-rule="evenodd" d="M4 4a2 2 0 0 0-2 2v12a2 2 0 0 0 .087.586l2.977-7.937A1 1 0 0 1 6 10h12V9a2 2 0 0 0-2-2h-4.532l-1.9-2.28A2 2 0 0 0 8.032 4H4Zm2.693 8H6.5l-3 8H18l3-8H6.693Z" clip-rule="evenodd" />
             </svg>
-        </button>
+        </a>
         <button type="button" class="text-white font-medium bg-secondary-50 border border-gray-200 focus:ring-4 focus:outline-none focus:ring-gray-100 font-medium rounded-full text-sm px-3 py-3 text-center inline-flex items-center me-2 mb-2">
             <svg class="w-6 h-6 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" viewBox="0 0 24 24">
                 <path fill-rule="evenodd" d="M11.32 6.176H5c-1.105 0-2 .949-2 2.118v10.588C3 20.052 3.895 21 5 21h11c1.105 0 2-.948 2-2.118v-7.75l-3.914 4.144A2.46 2.46 0 0 1 12.81 16l-2.681.568c-1.75.37-3.292-1.263-2.942-3.115l.536-2.839c.097-.512.335-.983.684-1.352l2.914-3.086Z" clip-rule="evenodd" />
