--- a/AUF.EMR.MVC/Views/HouseHold/HouseholdProfile.cshtml
+++ b/AUF.EMR.MVC/Views/HouseHold/HouseholdProfile.cshtml
@@ -1,87 +1,92 @@
 ﻿@model HouseholdProfileVM
 
 @{
+    Layout = "Layouts/_FormLayout";
     ViewData["Title"] = "Index";
 }
 
-<h1>F1 - Household Profile</h1>
 <p>
     <a asp-action="Household" asp-controller="Dashboard" asp-route-householdNo="@Model.HouseholdNo">See Household Dashboard</a>
 </p>
 @Html.PartialAsync("_FormNav", Model.HouseholdNo).Result
 
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Household.HouseholdNo)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Household.LastName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Household.FirstName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Household.MotherMaidenName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Household.HouseNoAndStreet)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Household.Barangay)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Household.City)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Household.Province)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Household.ContactNo)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model.Households)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.HouseholdNo)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.LastName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.FirstName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.MotherMaidenName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.HouseNoAndStreet)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Barangay)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.City)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Province)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ContactNo)
-                </td>
-                <td>
-                    <a class="btn btn-success" asp-action="Details" asp-route-id="@item.Id">View</a>
-                    <a class="btn btn-primary" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
-                    <form asp-action="Delete" asp-route-id="@item.Id">
-                        <button type="submit" class="btn btn-danger">Delete</button>
-                    </form>
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
+<div class="flex justify-between">
+    <h1>Household Profile</h1>
+    <p>Household No.: @Model.HouseholdNo</p>
+</div>
+
+@{
+    var formatted1Qtr = Model.Household.FirstQtrVisit.HasValue ? Model.Household.FirstQtrVisit.Value.ToString("MM-dd-yy") : "N/A";
+    var formatted2Qtr = Model.Household.SecondQtrVisit.HasValue ? Model.Household.SecondQtrVisit.Value.ToString("MM-dd-yy") : "N/A";
+    var formatted3Qtr = Model.Household.ThirdQtrVisit.HasValue ? Model.Household.ThirdQtrVisit.Value.ToString("MM-dd-yy") : "N/A";
+    var formatted4Qtr = Model.Household.FourthQtrVisit.HasValue ? Model.Household.FourthQtrVisit.Value.ToString("MM-dd-yy") : "N/A";
+}
+
+<div class="w-full p-8 bg-white border border-gray-200 rounded-lg shadow mb-6 hover-household overflow-x-auto">
+    <!-- First row -->
+    <div class="grid grid-cols-4 grid-flow-col gap-4 divide-x text-center">
+        <div>
+            <h6 class="text-gray-900 text-sm font-bold mb-2">First Quarter Visit</h6>
+            <p class="text-gray-800 text-sm font-medium ">@formatted1Qtr</p>
+            <p class="text-gray-800 text-xs font-bold">mm - dd - yy</p>
+        </div>
+        <div>
+            <h6 class="text-gray-900 text-sm font-bold mb-2">Second Quarter Visit</h6>
+            <p class="text-gray-800 text-sm font-medium text-center">@formatted2Qtr</p>
+            <p class="text-gray-800 text-xs font-bold">mm - dd - yy</p>
+        </div>
+        <div>
+            <h6 class="text-gray-900 text-sm font-bold mb-2">Third Quarter Visit</h6>
+            <p class="text-gray-800 text-sm font-medium">@formatted3Qtr</p>
+            <p class="text-gray-800 text-xs font-bold">mm - dd - yy</p>
+        </div>
+        <div>
+            <h6 class="text-gray-900 text-sm font-bold mb-2">Fourth Quarter Visit</h6>
+            <p class="text-gray-800 text-sm font-medium">@formatted4Qtr</p>
+            <p class="text-gray-800 text-xs font-bold">mm - dd - yy</p>
+        </div>
+    </div>
+    <hr class="h-px my-8 bg-gray-200 border-0 dark:bg-gray-700">
+    <!-- Second row -->
+    <div class="grid grid-cols-4 grid-flow-col gap-4 text-center">
+        <div>
+            <h6 class="text-gray-900 text-sm font-bold mb-2">Name of Respondent:</h6>
+        </div>
+        <div>
+            <h6 class="text-gray-900 text-sm font-bold mb-2">Last Name:</h6>
+            <p class="text-gray-800 text-sm font-medium text-center">@Model.Household.LastName</p>
+        </div>
+        <div>
+            <h6 class="text-gray-900 text-sm font-bold mb-2">First Name:</h6>
+            <p class="text-gray-800 text-sm font-medium text-center">@Model.Household.FirstName</p>
+        </div>
+        <div>
+            <h6 class="text-gray-900 text-sm font-bold mb-2">Mother's Maiden Name Name:</h6>
+            <p class="text-gray-800 text-sm font-medium text-center">@((Model.Household.MotherMaidenName != null) ? Model.Household.MotherMaidenName : "N/A")</p>
+        </div>
+    </div>
+    <hr class="h-px my-8 bg-gray-200 border-0 dark:bg-gray-700">
+    <!-- Third row -->
+    <div class="grid grid-cols-4 grid-flow-col gap-4 text-center divide-x">
+        <div>
+            <h6 class="text-gray-900 text-sm font-bold mb-2">NHTS Household:</h6>
+            <p class="text-gray-800 text-sm font-medium text-center">@((Model.Household.IsNHTS) ? "NHTS" : "Non NHTS")</p>
+        </div>
+        <div>
+            <h6 class="text-gray-900 text-sm font-bold mb-2">IP Member:</h6>
+            <p class="text-gray-800 text-sm font-medium text-center">@((Model.Household.IsIP) ? "IP" : "Non-IP")</p>
+        </div>
+        <div>
+            <h6 class="text-gray-900 text-sm font-bold mb-2">HH Head Philhealth Member?</h6>
+            <p class="text-gray-800 text-sm font-medium text-center">
+                @(Model.Household.IsHeadPhilhealthMember ?
+                    Html.Raw($"Yes, Philhealth ID No. <span class='underline'>{Model.Household.PhilhealthNo}</span>") :
+                    "No")
+            </p>
+        </div>
+        <div>
+            <h6 class="text-gray-900 text-sm font-bold mb-2">Category:</h6>
+            <p class="text-gray-800 text-sm font-medium text-center">@((Model.Household.Category != null) ? @Model.Household.Category : "N/A")</p>
+        </div>
+    </div>
+</div>
