--- a/AUF.EMR.MVC/wwwroot/css/style.css
+++ b/AUF.EMR.MVC/wwwroot/css/style.css
@@ -65,3 +65,12 @@
     background-color: #f4f7fa;
     cursor: pointer;
 }
+
+/* FLOWBITE TAILWIND EXTENSIONS KASI DI COMPLETE ATA NASA LIB T.T */
+.custom-ml-72 {
+    margin-left: 18rem;
+}
+
+.smaple {
+    background-color: gray;
+}
