Design household profile

--- a/AUF.EMR.MVC/Views/HouseHold/Index.cshtml
+++ b/AUF.EMR.MVC/Views/HouseHold/Index.cshtml
@@ -6,10 +6,10 @@
 }
 
 <section class="flex justify-center">
-    <div class="w-1/2 my-12 overflow-x-auto">
+    <div class="w-1/2 my-12 overflow-x-auto p-1 pt-16">
         <div class="flex justify-between w-full">
             <h1 class="text-xl md:text-3xl font-bold text-gray-800">Search Household</h1>
-            <a asp-action="Create" class="min-w-max bg-primary-50 text-white focus:ring-4 focus:outline-none focus:ring-gray-100 rounded-lg text-sm px-5 py-2.5 text-center flex items-center">
+            <a asp-action="Create" class="min-w-max bg-primary-50 text-white focus:ring-4 focus:outline-none focus:ring-green-200 rounded-lg text-sm px-5 py-2.5 text-center flex items-center">
                 <i class="fi fi-br-layer-plus"></i>
                 <span class="hidden md:inline font-medium">&nbsp; Add a Household</span>
             </a>
@@ -27,7 +27,7 @@
                     </div>
                     <input name="query" class="bg-gray-50 border px-5 py-2.5 ps-10 border-gray-300 text-gray-900 text-sm rounded-lg w-full" type="text" placeholder="Search household no. or household member" />
                 </div>
-                <button class="bg-primary-50 text-white rounded-lg focus:ring-4 focus:outline-none focus:ring-gray-100 text-sm font-medium px-5 py-2.5 text-center min-w-max" id="search-text">
+                <button class="bg-primary-50 text-white rounded-lg focus:ring-4 focus:outline-none focus:ring-green-200 text-sm font-medium px-5 py-2.5 text-center min-w-max" id="search-text">
                     <i class="fas fa-search"></i> &nbsp; Search
                 </button>
             </div>
