--- a/AUF.EMR.MVC/Views/HouseHold/Create.cshtml
+++ b/AUF.EMR.MVC/Views/HouseHold/Create.cshtml
@@ -10,7 +10,7 @@
     @await Html.PartialAsync("Popups/_AlertError", Model.ErrorMessage);
 }
 
-<section class="flex justify-center">
+<section class="flex justify-center pt-16">
     <div class="w-2/3 my-12">
         <form asp-action="Create">
             <h1 class="text-xl md:text-3xl font-bold text-gray-800 mb-4">Register Household</h1>
@@ -27,22 +27,22 @@
                     </div>
                     <div class="mb-4">
                         <label asp-for="Household.FirstName" class="block mb-2 text-sm font-medium text-gray-700">First Name</label>
-                        <input type="text" asp-for="Household.FirstName" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" required />
+                        <input type="text" asp-for="Household.FirstName" placeholder="eg. Juan" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" required />
                         <span asp-validation-for="Household.FirstName" class="block mb-2 text-sm text-red-700"></span>
                     </div>
                     <div class="mb-4">
                         <label asp-for="Household.MotherMaidenName" class="block mb-2 text-sm font-medium text-gray-700">Mother's Maiden Name <span class="text-gray-500">(optional)</span></label>
-                        <input type="text" asp-for="Household.MotherMaidenName" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
+                        <input type="text" asp-for="Household.MotherMaidenName" placeholder="eg. Miranda" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" />
                         <span asp-validation-for="Household.MotherMaidenName" class="block mb-2 text-sm text-red-700"></span>
                     </div>
                     <div class="mb-4">
                         <label asp-for="Household.LastName" class="block mb-2 text-sm font-medium text-gray-700">Last Name</label>
-                        <input type="text" asp-for="Household.LastName" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" required />
+                        <input type="text" asp-for="Household.LastName" placeholder="eg. Dela Cruz" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" required />
                         <span asp-validation-for="Household.LastName" class="block mb-2 text-sm text-red-700"></span>
                     </div>
                     <div class="mb-4">
                         <label asp-for="Household.ContactNo" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Phone number</label>
-                        <input type="tel" asp-for="Household.ContactNo" class=" bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-2/4 p-2.5" placeholder="123-45-678" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" required />
+                        <input type="tel" asp-for="Household.ContactNo" class=" bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-2/4 p-2.5" placeholder="0912-345-6789" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" required />
                         <span asp-validation-for="Household.ContactNo" class="block mb-2 text-sm text-red-700"></span>
                     </div>
                     <div class="mb-2 mt-8">
@@ -50,22 +50,22 @@
                     </div>
                     <div class="mb-4">
                         <label asp-for="Household.HouseNoAndStreet" class="block mb-2 text-sm font-medium text-gray-700">House No. and Street</label>
-                        <input type="text" asp-for="Household.HouseNoAndStreet" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" required />
+                        <input type="text" asp-for="Household.HouseNoAndStreet" placeholder="eg. 123 Mabuhay St." class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" required />
                         <span asp-validation-for="Household.HouseNoAndStreet" class="block mb-2 text-sm text-red-700"></span>
                     </div>
                     <div class="mb-4">
                         <label asp-for="Household.Barangay" class="block mb-2 text-sm font-medium text-gray-700">Barangay</label>
-                        <input type="text" asp-for="Household.Barangay" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" required />
+                        <input type="text" asp-for="Household.Barangay" placeholder="eg. Brgy Ninoy Aquino" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" required />
                         <span asp-validation-for="Household.Barangay" class="block mb-2 text-sm text-red-700"></span>
                     </div>
                     <div class="mb-4">
                         <label asp-for="Household.City" class="block mb-2 text-sm font-medium text-gray-700">City</label>
-                        <input type="text" asp-for="Household.City" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" required />
+                        <input type="text" asp-for="Household.City" placeholder="eg. Angeles City" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" required />
                         <span asp-validation-for="Household.City" class="block mb-2 text-sm text-red-700"></span>
                     </div>
                     <div class="mb-4">
                         <label asp-for="Household.Province" class="block mb-2 text-sm font-medium text-gray-700">Province</label>
-                        <input type="text" asp-for="Household.Province" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" required />
+                        <input type="text" asp-for="Household.Province" placeholder="eg. Pampanga" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" required />
                         <span asp-validation-for="Household.Province" class="block mb-2 text-sm text-red-700"></span>
                     </div>
                 </div>
@@ -76,7 +76,7 @@
                     </div>
                     <div class="mb-4">
                         <label asp-for="Household.FirstQtrVisit" class="block mb-2 text-sm font-medium text-gray-700">First Quarter Visit</label>
-                        <div class="relative max-w-sm mb-4">
+                        <div class="relative w-full md:w-4/5 mb-4">
                             <div class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none">
                                 <svg class="w-4 h-4 text-gray-500 dark:text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
                                     <path d="M20 4a2 2 0 0 0-2-2h-2V1a1 1 0 0 0-2 0v1h-3V1a1 1 0 0 0-2 0v1H6V1a1 1 0 0 0-2 0v1H2a2 2 0 0 0-2 2v2h20V4ZM0 18a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V8H0v10Zm5-8h10a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2Z" />
@@ -88,7 +88,7 @@
                     </div>
                     <div class="mb-4">
                         <label asp-for="Household.SecondQtrVisit" class="block mb-2 text-sm font-medium text-gray-700">Second Quarter Visit</label>
-                        <div class="relative max-w-sm mb-4">
+                        <div class="relative w-full md:w-4/5 mb-4">
                             <div class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none">
                                 <svg class="w-4 h-4 text-gray-500 dark:text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
                                     <path d="M20 4a2 2 0 0 0-2-2h-2V1a1 1 0 0 0-2 0v1h-3V1a1 1 0 0 0-2 0v1H6V1a1 1 0 0 0-2 0v1H2a2 2 0 0 0-2 2v2h20V4ZM0 18a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V8H0v10Zm5-8h10a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2Z" />
@@ -100,7 +100,7 @@
                     </div>
                     <div class="mb-4">
                         <label asp-for="Household.ThirdQtrVisit" class="block mb-2 text-sm font-medium text-gray-700">Third Quarter Visit</label>
-                        <div class="relative max-w-sm mb-4">
+                        <div class="relative w-full md:w-4/5 mb-4">
                             <div class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none">
                                 <svg class="w-4 h-4 text-gray-500 dark:text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
                                     <path d="M20 4a2 2 0 0 0-2-2h-2V1a1 1 0 0 0-2 0v1h-3V1a1 1 0 0 0-2 0v1H6V1a1 1 0 0 0-2 0v1H2a2 2 0 0 0-2 2v2h20V4ZM0 18a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V8H0v10Zm5-8h10a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2Z" />
@@ -112,7 +112,7 @@
                     </div>
                     <div class="mb-4">
                         <label asp-for="Household.FourthQtrVisit" class="block mb-2 text-sm font-medium text-gray-700">Fourth Quarter Visit</label>
-                        <div class="relative max-w-sm mb-4">
+                        <div class="relative w-full md:w-4/5 mb-4">
                             <div class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none">
                                 <svg class="w-4 h-4 text-gray-500 dark:text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
                                     <path d="M20 4a2 2 0 0 0-2-2h-2V1a1 1 0 0 0-2 0v1h-3V1a1 1 0 0 0-2 0v1H6V1a1 1 0 0 0-2 0v1H2a2 2 0 0 0-2 2v2h20V4ZM0 18a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V8H0v10Zm5-8h10a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2Z" />
@@ -128,11 +128,11 @@
                     <div class="mb-4">
                         <div class="flex">
                             <div class="flex items-center me-4">
-                                <input asp-for="Household.IsNHTS" value="true" type="radio" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500">
+                                <input asp-for="Household.IsNHTS" value="true" type="radio" class="w-4 h-4 text-blue-600 bg-gray-50 border-gray-300 focus:ring-blue-500">
                                 <label asp-for="Household.IsNHTS" class="ms-2 text-sm font-medium text-gray-900">NHTS</label>
                             </div>
                             <div class="flex items-center me-4">
-                                <input asp-for="Household.IsNHTS" value="false" type="radio" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500">
+                                <input asp-for="Household.IsNHTS" value="false" type="radio" class="w-4 h-4 text-blue-600 bg-gray-50 border-gray-300 focus:ring-blue-500">
                                 <label asp-for="Household.IsNHTS" class="ms-2 text-sm font-medium text-gray-900">Non NHTS</label>
                             </div>
                         </div>
@@ -144,11 +144,11 @@
                     <div class="mb-4">
                         <div class="flex">
                             <div class="flex items-center me-4">
-                                <input asp-for="Household.IsIP" value="true" type="radio" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500">
+                                <input asp-for="Household.IsIP" value="true" type="radio" class="w-4 h-4 text-blue-600 bg-gray-50 border-gray-300 focus:ring-blue-500">
                                 <label asp-for="Household.IsIP" class="ms-2 text-sm font-medium text-gray-900">IP</label>
                             </div>
                             <div class="flex items-center me-4">
-                                <input asp-for="Household.IsIP" value="false" type="radio" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500">
+                                <input asp-for="Household.IsIP" value="false" type="radio" class="w-4 h-4 text-blue-600 bg-gray-50 border-gray-300 focus:ring-blue-500">
                                 <label asp-for="Household.IsIP" class="ms-2 text-sm font-medium text-gray-900">Non IP</label>
                             </div>
                         </div>
@@ -160,18 +160,23 @@
                     <div class="mb-4">
                         <div class="flex mb-4">
                             <div class="flex items-center me-4">
-                                <input asp-for="Household.IsHeadPhilhealthMember" value="false" id="philhealthMember" type="radio" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500">
+                                <input asp-for="Household.IsHeadPhilhealthMember" value="false" id="philhealthMember" type="radio" class="w-4 h-4 text-blue-600 bg-gray-50 border-gray-300 focus:ring-blue-500">
                                 <label asp-for="Household.IsHeadPhilhealthMember" class="ms-2 text-sm font-medium text-gray-900">Philhealth member</label>
                             </div>
                             <div class="flex items-center me-4">
-                                <input asp-for="Household.IsHeadPhilhealthMember" value="false" id="nonPhilhealthMember" type="radio" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500">
+                                <input asp-for="Household.IsHeadPhilhealthMember" value="false" id="nonPhilhealthMember" type="radio" class="w-4 h-4 text-blue-600 bg-gray-50 border-gray-300 focus:ring-blue-500">
                                 <label asp-for="Household.IsHeadPhilhealthMember" class="ms-2 text-sm font-medium text-gray-900">Non Philhealth member</label>
                             </div>
                         </div>
-                        <span asp-validation-for="Household.IsHeadPhilhealthMember" class="block mb-2 text-sm text-red-700"></span>
+                        <span asp-validation-for="Household.IsHeadPhilhealthMember" class="block mb-2 text-sm text-red-700"></span> 
+                        <div class="mb-4">
+                            <label asp-for="Household.PhilhealthNo" class="block mb-2 text-sm font-medium text-gray-700">Philhealth No.</label>
+                            <input type="text" asp-for="Household.PhilhealthNo" id="philhealthNoInput" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" disabled />
+                            <span asp-validation-for="Household.PhilhealthNo" class="block mb-2 text-sm text-red-700"></span>
+                        </div>
                         <div class="mb-4">
                             <label asp-for="Household.Category" class="block mb-2 text-sm font-medium text-gray-700">Category</label>
-                            <input type="text" asp-for="Household.Category" id="categoryInput" class="bg-gray-100 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" disabled />
+                            <input type="text" asp-for="Household.Category" id="categoryInput" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" disabled />
                             <span asp-validation-for="Household.Category" class="block mb-2 text-sm text-red-700"></span>
                         </div>
                     </div>
@@ -189,18 +194,25 @@
     const philhealthMemberRadio = document.getElementById('philhealthMember');
     const nonPhilhealthMemberRadio = document.getElementById('nonPhilhealthMember');
     const categoryInput = document.getElementById('categoryInput');
+    const philhealthNoInput = document.getElementById('philhealthNoInput');
 
     philhealthMemberRadio.addEventListener('change', function () {
         categoryInput.disabled = !this.checked;
+        philhealthNoInput.disabled = !this.checked;
+
         if (!this.checked) {
             categoryInput.value = '';
+            philhealthNoInput.value = '';
         }
     });
 
     nonPhilhealthMemberRadio.addEventListener('change', function () {
         categoryInput.disabled = this.checked;
+        philhealthNoInput.disabled = this.checked;
+
         if (this.checked) {
             categoryInput.value = '';
+            philhealthNoInput.value = '';
         }
     });
 </script>
