--- a/AUF.EMR.MVC/Views/Shared/Navigations/_HouseholdNav.cshtml
+++ b/AUF.EMR.MVC/Views/Shared/Navigations/_HouseholdNav.cshtml
@@ -7,7 +7,7 @@
     var brgyName = (await @brgyService.GetBarangay()).BarangayName;
 }
 
-<nav class="bg-white border-gray-200 dark:bg-gray-900 shadow-sm">
+<nav class="fixed top-0 w-full z-50 bg-white border-b border-gray-200 dark:bg-gray-800 dark:border-gray-700">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
         <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
             <img src="https://flowbite.com/docs/images/logo.svg" class="h-8" alt="Flowbite Logo" />
