Added barangay layout, but still has an issue with adding the barangay nav

--- a/AUF.EMR.MVC/Views/Barangay/Edit.cshtml
+++ b/AUF.EMR.MVC/Views/Barangay/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model EditBarangayVM
 
 @{
-    Layout = "Layouts/_HouseholdLayout";
+    Layout = "Layouts/_BarangayLayout";
     ViewData["Title"] = "Edit";
 }
 
@@ -20,7 +20,7 @@
                     </div>
                     <div class="mb-4">
                         <label asp-for="LogoFile" class="block mb-2 text-sm font-medium text-gray-700">Barangay Logo</label>
-                        <input type="file" asp-for="LogoFile" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" required />
+                        <input type="file" asp-for="LogoFile" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-3/4 md:w-4/5 p-2.5" required />
                         <span asp-validation-for="LogoFile" class="block mb-2 text-sm text-red-700"></span>
                     </div>
                     <div class="mb-2 mt-8">
