--- a/AUF.EMR.MVC/Views/Barangay/Index.cshtml
+++ b/AUF.EMR.MVC/Views/Barangay/Index.cshtml
@@ -5,10 +5,10 @@
     ViewData["Barangay"] = Model.BarangayName;
 }
 
-<h1>Index</h1>
+<h1>Barangay Health Center Information</h1>
 
 <div>
-    <h4>Barangay</h4>
+
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
