Added barangay side bar

--- a/AUF.EMR.MVC/Views/Barangay/Edit.cshtml
+++ b/AUF.EMR.MVC/Views/Barangay/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model EditBarangayVM
 
 @{
-    Layout = "Layouts/_BarangayLayout";
+    Layout = "Layouts/_BarangaySideLayout";
     ViewData["Title"] = "Edit";
 }
 
